--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>My Portfolio</h2>  
 								<div style="position:relative;top:25px;">								
-									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolio.png" alt="">
+									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p1.png" alt="">
 									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioWorks.png" alt="">
 									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioAbout.png" alt="">
 									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioSkills.png" alt="">
