--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
                                 <h2>My Portfolio</h2>  
 								<div style="position:relative;top:25px;">								
 									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p1.png" alt="">
-									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioWorks.png" alt="">
-									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioAbout.png" alt="">
-									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioSkills.png" alt="">
+									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p2.png" alt="">
+									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p3.png" alt="">
+									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p4.png" alt="">
 									<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
 								</div>
                                 
