--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="description" content="Hi Guys...
+    I'm Ranjith Kumar and I'm a front-end and back-end developer based in Tamil Nadu,India.Currently working as System Engineer at Infosys Ltd." />
+    <meta name="keywords" content="Ranjith Kumar,ranjith kumar,ranjith,kumar,rk ui/ux dev,RK UI/UX Dev,rk portfolio,ranjith kumar portfolio,Ranjith Kumar Portfolio,Ranjith Portfolio,UI/UX Developer,UI/UX Dev,Best Website,best website,best portfolio,Best Portfolio,top portfolio,Top Portfolio,top 10 portfolio,Top 10 Portfolio,best front end developer" />
+    <meta name="author" content="Ranjith Kumar">
+    <meta name="robots" content="index, follow" /> 
 
     <title>RK UI/UX Developer</title>
 	<link rel="icon" href="img/icon.png">
