--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 		
 			<a href="https://twitter.com/Ranjithyounker" target="_blank" class="twitter"><i class="fa fa-twitter"></i>Twitter</a>
 
-			<a href="https://www.facebook.com/Ranjithyounker" target="_blank" class="facebook"><i class="fa fa-facebook"></i>Facebook</a>
+			<!--<a href="https://www.facebook.com/Ranjithyounker" target="_blank" class="facebook"><i class="fa fa-facebook"></i>Facebook</a>-->
 
 			<a href="https://plus.google.com/110356964659610522143" target="_blank" class="googleplus"><i class="fa fa-google-plus"></i>Google +</a><!-- 
 
