--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta name="description" content="Hi Guys...
-    I'm Ranjith Kumar and I'm a front-end and back-end developer based in Tamil Nadu,India.Currently working as System Engineer at Infosys Ltd." />
+    <meta name="description" content="Hi Guys...I'm Ranjith Kumar and I'm a front-end and back-end developer based in Tamil Nadu,India.Currently working as System Engineer at Infosys Ltd." />
     <meta name="keywords" content="Ranjith Kumar,ranjith kumar,ranjith,kumar,rk ui/ux dev,RK UI/UX Dev,rk portfolio,ranjith kumar portfolio,Ranjith Kumar Portfolio,Ranjith Portfolio,UI/UX Developer,UI/UX Dev,Best Website,best website,best portfolio,Best Portfolio,top portfolio,Top Portfolio,top 10 portfolio,Top 10 Portfolio,best front end developer" />
     <meta name="author" content="Ranjith Kumar">
     <meta name="robots" content="index, follow" /> 
@@ -27,6 +26,7 @@
 
     <!-- Theme CSS -->
     <link href="css/custom.css" rel="stylesheet">
+	<link href="datepicker/css/datepicker.css" rel="stylesheet">
 	<link href="css/loader.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -116,6 +116,10 @@
                     <br/><br/><br/><br/><br/><br/>
                 </div>
             </div>
+			<div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+  <input class="span2" size="16" type="text" value="12-02-2012">
+  <span class="add-on"><i class="icon-th"></i></span>
+</div>
             <div class="row">
                 <div class="col-md-6 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link scaleZoom" data-toggle="modal">
@@ -435,10 +439,10 @@
                                 <!-- Project Details Go Here -->
                                 <h2>My Portfolio</h2>  
 								<div style="position:relative;top:25px;">								
-									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p1.png" alt="">
-									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p2.png" alt="">
-									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p3.png" alt="">
-									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/p4.png" alt="">
+									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolio.png" alt="">
+									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioWorks.png" alt="">
+									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioAbout.png" alt="">
+									<img class="img-responsive img-centered scaleZoom ImgModal" src="img/portfolio/portfolioSkills.png" alt="">
 									<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
 								</div>
                                 
@@ -492,6 +496,7 @@
 	<script src="js/easypiechart.js"></script>
 	
 	<script src="js/skills.js"></script>
+	<script src="datepicker/js/bootstrap-datepicker.js"></script>
 	 <script>
         $(document).ready(function () {
            $(".modalDialog").attr('style', 'display :block');
