--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="intro-text">
                 <h1>I'm Ranjith</h1>
 				<div class="spacer"></div>
-				<h1>Designer1 + Developer</h1>
+				<h1>Designer + Developer</h1>
 				<div class="spacer"></div>
 				<hr style="position:relative; margin-top:0px;margin-bottom:0px !important">
 				<hr style="position:relative; margin-top:5px;margin-bottom:0px !important">
