--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <meta name="description" content="Hi Guys...I'm Ranjith Kumar and I'm a front-end and back-end developer based in Tamil Nadu,India.Currently working as System Engineer at Infosys Ltd." />
     <meta name="keywords" content="Ranjith Kumar,ranjith kumar,ranjith,kumar,rk ui/ux dev,RK UI/UX Dev,rk portfolio,ranjith kumar portfolio,Ranjith Kumar Portfolio,Ranjith Portfolio,UI/UX Developer,UI/UX Dev,Best Website,best website,best portfolio,Best Portfolio,top portfolio,Top Portfolio,top 10 portfolio,Top 10 Portfolio,best front end developer" />
     <meta name="author" content="Ranjith Kumar">
@@ -74,12 +72,6 @@
                     </li>					
                     <li>
                         <a class="page-scroll" href="#social-section">Contact</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" onclick="changeCSS('custom',0)">Dark</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" onclick="changeCSS('light',0)">Light</a>
                     </li>
 					<li>
             </li>
@@ -497,28 +489,16 @@
     <script src="js/custom.js"></script>
 	<script src="js/easypiechart.js"></script>
 	
-	<script src="js/skills.js"></script>	
+	<script src="js/skills.js"></script>
+	<script src="datepicker/js/bootstrap-datepicker.js"></script>
 	 <script>
         $(document).ready(function () {
            $(".modalDialog").attr('style', 'display :block');
             window.setTimeout(function () {
                 $(".modalDialog").attr('style', 'display :none');
-            }, 3 00);
+            }, 3000);
 
         })
-    </script>
-    <script>
-        function changeCSS(cssFile, cssLinkIndex) {
-            debugger;
-            var oldlink = document.getElementsByTagName("link").item(cssLinkIndex);
-
-            var newlink = document.createElement("link");
-            newlink.setAttribute("rel", "stylesheet");
-            newlink.setAttribute("type", "text/css");
-            newlink.setAttribute("href", "css/" + cssFile + ".css");
-            //css / custom.css
-            document.getElementsByTagName("head").item(0).replaceChild(newlink, oldlink);
-        }
     </script>
 
 </body>
